build: clean up Gradle 9 dependency deprecations, enable native access for JDK 25, and fix compiler warnings